force-app/main/default/objects/ssot__VehicleTelematicsEvent__dlm/fields/ssot__AssetCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssetCategory__c</fullName>
    <label>Asset Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssetCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>