force-app/main/default/objects/ssot__VehicleTelematicsEvent__dlm/fields/ssot__EngineRevolutionsPerMinuteNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__EngineRevolutionsPerMinuteNumber__c</fullName>
    <label>Engine Revolutions Per Minute</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EngineRevolutionsPerMinuteNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>