force-app/main/default/objects/ssot__VehicleTelematicsEvent__dlm/fields/ssot__IgnitionStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__IgnitionStatus__c</fullName>
    <label>Ignition Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IgnitionStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>