force-app/main/default/objects/ssot__VehicleTelematicsEvent__dlm/fields/ssot__Longitude__c.field-meta.xml
<CustomField>
    <fullName>ssot__Longitude__c</fullName>
    <label>Longitude</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Longitude</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>