force-app/main/default/objects/ssot__VehicleTelematicsEvent__dlm/fields/ssot__OdometerReadingUomId__c.field-meta.xml
<CustomField>
    <fullName>ssot__OdometerReadingUomId__c</fullName>
    <label>Odometer Reading UOM</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OdometerReadingUomId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>