force-app/main/default/objects/ssot__VehicleTelematicsEvent__dlm/fields/ssot__rel_1697761233070_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761233070_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VehicleTelematicsEvent_AccelerationU_rel</label>
    <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
    <relationshipLabel>VehicleTelematicsEvent_AccelerationU_rel</relationshipLabel>
    <relationshipName>rel_1697761233070_end</relationshipName>
    <type>Lookup</type>
</CustomField>