force-app/main/default/objects/ssot__VehicleTelematicsEvent__dlm/fields/ssot__SpeedUomId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SpeedUomId__c</fullName>
    <label>Speed UOM</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SpeedUomId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>