force-app/main/default/objects/ssot__VehicleTelematicsEvent__dlm/fields/ssot__VehicleId__c.field-meta.xml
<CustomField>
    <fullName>ssot__VehicleId__c</fullName>
    <label>Vehicle</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VehicleId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>